2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added the last-ditch parser to handle invalid XML in a sane
	  way. It should work on 99% of the 'invalid' xml.

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Compile fix

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-17  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/Camera.cs, src/Makefile.am,
	  src/Base/CameraFilesystem.cs, src/Base/Camera.cs, libgphoto2-sharp.mdp:
	  Added detection for 64bit systems and return an empty camera list for
	  those systems as they are not supported.

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Added debug out

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFilesystem.cs, src/Base/Camera.cs: First attempt at working
	  around the 64bit long issue.

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: made methods alphabetical
	* src/FileSystem.cs: Removed old debug line. Renamed 'path' to 'directory'
	  to keep API consistant. Removed old FIXMEs that have been fixed.
	* src/Files/ImageFile.cs: Cosmetic changes

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/ImageFile.cs: Added some useful helper properties

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* Sample/Main.cs, src/TestGphoto2Sharp.cs, src/Abilities.cs,
	  src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/PortInfo.cs,
	  src/Base/CameraList.cs, src/Base/Context.cs, src/Base/Port.cs,
	  src/Base/Object.cs, src/Base/ErrorCodes.cs, src/Base/Camera.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: made the
	  library API-compatible with the previous release
	* src/File.cs, src/FileSystem.cs, src/Camera.cs, src/Files/GenericFile.cs,
	  src/Files/MusicFile.cs, src/Files/PlaylistFile.cs,
	  src/Files/ImageFile.cs: Added license header and made the library